# nucleus-old

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  containers_test.c  main.c  test.c
examples/test2module/: CMakeLists.txt  module.c  module.h
examples/testmodule/: CMakeLists.txt  module.c  module.h
nucleus/: CMakeLists.txt  nucleus.h  nucleus.hpp
nucleus/core/: CMakeLists.txt  core.c  core.h  nucleus.h  nucleus_core.h
nucleus/core/api/: allocator.h  config.h  engine.h  event.h  input.h  logger.h  module.h  renderer.h  task.h  window.h
nucleus/core/api/contextold/: context.c.old
nucleus/core/api/systemold/: task.interface.json  window.interface.json
nucleus/core/common/: common.h  input.h  logger.c  logger.h  macro.h  memory.c  memory.h  platform.h  result.h  timer.c  timer.h  type.h  utility.c  utility.h
nucleus/core/common/math/: cam.c  cam.h  mat3.c  mat3.h  mat4.c  mat4.h  math.h  quat.c  quat.h  rect.c  rect.h  transform.c  transform.h  types.h  utility.c  utility.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vec4.h
nucleus/core/config/: config.c  config.h  interface.h
nucleus/core/context/: config.c  config.h  context.c  context.h
nucleus/core/coresystem/event/: event.c  event.h  interface.h
nucleus/core/coresystem/logger/: interface.h  logger.c  logger.h
nucleus/core/event/: event.c  event.h  interface.h
nucleus/core/logger/: interface.h  logger.c  logger.h
nucleus/core/memory/: interface.h  memory.c  memory.h
nucleus/core/module/: interface.c  interface.h  module.c  module.h
nucleus/core/plugin/: interface.h  plugin.c  plugin.h  plugin_interface.h
nucleus/core/system/: input.c  input.h  input.interface.json  input_interface.h  renderer.c  renderer.h  renderer.interface.json  renderer_interface.h  task.c  task.h  task.interface.json  task_interface.h  window.c  window.h  window.interface.json  window_interface.h
nucleus/core/system/config/: api.h  (+2 more)
nucleus/core/utility/: all.h  check.h  common.h  interrupt.c  interrupt.h  io.c  io.h  json.c  json.h  macro.h  platform.h  result.h  string.c  string.h  table_printer.c  table_printer.h  time.c  time.h  timer.c  timer.h  type.h
nucleus/core/utils/: array.c  array.h  hashmap.c  hashmap.h  indexed_array.c  indexed_array.h  io.c  io.h  path.c  path.h  string.c  string.h  timer.c  timer.h  transform.c  transform.h
nucleus/glfw/: CMakeLists.txt  callback.c  callback.h  context.c  context.h  logger.h  surface.c  surface.h
nucleus/glfw/input/: input.c  input.h
nucleus/glfw/module/: interface.c  interface.h  module.c  module.h  window.c  window.h
nucleus/glfw/window/: callback.c  callback.h  surface.h  window.c  window.h
nucleus/module/: ecs.h  glfw.h  lua.h  opengl.h  raytracer.h  softrast.h  task.h  utils.h  vulkan.h
nucleus/module/ecs/: CMakeLists.txt  manager.interface.json  module.json  query.interface.json  scene.interface.json  world.interface.json
nucleus/module/glfw/: CMakeLists.txt  module.json  window.interface.json
nucleus/module/lua/: CMakeLists.txt  manager.interface.json  module.json
nucleus/module/opengl/: CMakeLists.txt  renderer.cpp  renderer.hpp
nucleus/module/raytracer/: CMakeLists.txt  renderer.cpp  renderer.hpp
nucleus/module/softrast/: CMakeLists.txt  renderer.cpp  renderer.hpp
nucleus/module/task/: CMakeLists.txt  thread_pool.cpp  thread_pool.hpp
nucleus/module/utils/: CMakeLists.txt  command.interface.json  loader.interface.json  module.json
nucleus/module/vulkan/: CMakeLists.txt  module.json  renderer.c  renderer.cpp  renderer.h  renderer.hpp  renderer.interface.json
nucleus/plugin/debug/: CMakeLists.txt
nucleus/plugin/utility/: CMakeLists.txt
nucleus/plugin/utils/: CMakeLists.txt
nucleus/rasterizer/: CMakeLists.txt  rasterizer.c  rasterizer.h
nucleus/rasterizer/common/: logger.h
nucleus/rasterizer/memory/: framebuffer.c  framebuffer.h
nucleus/rasterizer/module/: interface.h  renderer.c  renderer.h
nucleus/softrast/: CMakeLists.txt  softrast.c  softrast.h
nucleus/softrast/asset/: font.c  font.h  mesh.c  mesh.h  texture.c  texture.h
nucleus/softrast/common/: config.h
nucleus/softrast/memory/: framebuffer.c  framebuffer.h
nucleus/softrast/module/: interface.h  module.c  module.h  renderer.c  renderer.h
nucleus/softrast/scene/: scene.c  scene.h
nucleus/system/glfw/: CMakeLists.txt
nucleus/system/opengl/: CMakeLists.txt  renderer.cpp  renderer.hpp
nucleus/system/raytracer/: CMakeLists.txt  renderer.cpp  renderer.hpp
nucleus/system/softrast/: CMakeLists.txt  renderer.cpp  renderer.hpp  softrast.c
nucleus/system/softrast-old/: CMakeLists.txt  softrast.h
nucleus/system/task/: CMakeLists.txt  thread_pool.cpp  thread_pool.hpp
nucleus/system/vulkan/: CMakeLists.txt  renderer.cpp  renderer.h  renderer.hpp
nucleus/system/vulkan-old/: CMakeLists.txt
nucleus/task/: CMakeLists.txt  thread_pool.cpp  thread_pool.hpp
nucleus/task/module/: interface.h  module.cpp  module.hpp  task.cpp
nucleus/utility/: nucleus.hpp
nucleus/utility/math/: matrix.hpp  quaternion.hpp  rect.hpp  transform.hpp  vector.hpp
nucleus/utility/wrapper/: renderer.hpp
nucleus/vulkan/: CMakeLists.txt  renderer.c  renderer.h
nucleus/vulkan/common/: logger.h
nucleus/vulkan/context/: context.c  context.h  device.c  instance.c  instance.h  physical_device.c  surface.c  swapchain.c  swapchain.h
nucleus/vulkan/glfw/: interface.c  interface.h
nucleus/vulkan/module/: interface.h  module.c  module.h  renderer.c  renderer.h
nucleus/vulkan/pipeline/: graphics_pipeline.c  graphics_pipeline.h  render_pass.c  render_pass.h  shader.c  shader.h
nucleus/vulkan/presentation/: debug_messenger.c  debug_messenger.h  device.c  device.h  instance.c  instance.h  physical_device.c  physical_device.h  surface.c  surface.h  swapchain.c  swapchain.h
nucleus/vulkan/render/: command.c  command.h  framebuffer.c  framebuffer.h  graphics_pipeline.c  graphics_pipeline.h  render.c  render.h  render_pass.c  render_pass.h  shader.c  synchronization.c
nucleus/vulkan/shaders/: shader.frag
tests/: CMakeLists.txt  containers_test.c  main.c  main.cpp
(+812 files in other folders)
