CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

PROJECT(nucleus-package VERSION 0.0.1)

OPTION(NU_DEBUG                  "Debug"                   ON)
OPTION(NU_DEBUG_MEMORY           "Debug memory"            ON)

OPTION(NU_BUILD_CORE             "Build nucleus-core"      ON)

OPTION(NU_BUILD_MODULE_GLFW      "Build nucleus-glfw"      ON)
OPTION(NU_BUILD_MODULE_UTILS     "Build nucleus-utils"     ON)

# Add compile definitions
IF (NU_DEBUG)
    ADD_COMPILE_DEFINITIONS(NU_DEBUG)
ENDIF()
IF (NU_DEBUG_MEMORY)
    ADD_COMPILE_DEFINITIONS(NU_DEBUG_MEMORY)
ENDIF()

# Add subdirectories
IF (NU_BUILD_CORE)
    ADD_SUBDIRECTORY(core)
    ADD_COMPILE_DEFINITIONS(NU_BUILD_CORE)
ENDIF()

# Add subdirectories
IF (NU_BUILD_MODULE_GLFW)
    ADD_SUBDIRECTORY(module/glfw)
    ADD_COMPILE_DEFINITIONS(NU_BUILD_MODULE_GLFW)
ENDIF()
IF (NU_BUILD_MODULE_OPENGL)
    ADD_SUBDIRECTORY(module/opengl)
    ADD_COMPILE_DEFINITIONS(NU_BUILD_MODULE_OPENGL)
ENDIF()
IF (NU_BUILD_MODULE_UTILS)
    ADD_SUBDIRECTORY(module/utils)
    ADD_COMPILE_DEFINITIONS(NU_BUILD_MODULE_UTILS)
ENDIF()