CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

PROJECT(testmodule LANGUAGES C VERSION 0.0.1)

ADD_COMPILE_DEFINITIONS(NU_DEBUG)
SET(CMAKE_BUILD_TYPE Debug)

INCLUDE_DIRECTORIES(
    ../../
)

FILE(GLOB_RECURSE sources ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

ADD_LIBRARY(
    ${PROJECT_NAME} SHARED
    ${sources}
)

TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME} PRIVATE
    nucleus
)

if (MSVC OR MINGW)
    INSTALL(
        TARGETS ${PROJECT_NAME}
        LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../libs/
        ARCHIVE DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../libs/
        RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../build/bin/
    )
elseif (UNIX)
    INSTALL(
        TARGETS ${PROJECT_NAME}
        LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../build/bin/
    )
endif()