CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

PROJECT(nucleus-vulkan LANGUAGES C VERSION 0.0.1)

SET(CMAKE_BUILD_TYPE Debug)
#SET(CMAKE_BUILD_TYPE Release)

SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall")

FIND_PACKAGE(OpenMP)
if (OPENMP_FOUND)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

FIND_PACKAGE(Vulkan REQUIRED FATAL_ERROR)

INCLUDE_DIRECTORIES(
    extlibs/cglm/include/
    extlibs/stb/include/
    ${Vulkan_INCLUDE_DIRS}
)

FILE(GLOB_RECURSE sources ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

ADD_LIBRARY(
    ${PROJECT_NAME} SHARED
    ${sources}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    mingw32
    nucleus-core
    nucleus-glfw
    ${Vulkan_LIBRARIES}
)

INSTALL(
    TARGETS ${PROJECT_NAME}
    LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../libs/
    ARCHIVE DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../libs/
    RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../bin/
)
