CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

PROJECT(nucleus-softrast LANGUAGES CXX VERSION 0.0.1)

#SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_BUILD_TYPE Release)

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_DEBUG} -O2")

FIND_PACKAGE(OpenMP)
if (OPENMP_FOUND)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

INCLUDE_DIRECTORIES(
    ../../../
    ../../../extlibs/stb/include/
    ../../../extlibs/freetype/include/
)

FILE(GLOB_RECURSE sources ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

ADD_LIBRARY(
    ${PROJECT_NAME} SHARED
    ${sources}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    mingw32
    nucleus
    ${CMAKE_CURRENT_SOURCE_DIR}/../../../extlibs/freetype/lib/mingw64/libfreetype.a
)

INSTALL(
    TARGETS ${PROJECT_NAME}
    LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../../libs/
    ARCHIVE DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../../libs/
    RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../../build/bin/engine/module/
)
