CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

PROJECT(nucleus-utils LANGUAGES CXX VERSION 0.0.1)

SET(CMAKE_BUILD_TYPE Debug)
#SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
	ADD_COMPILE_OPTIONS(/W2 /WX)
else(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    ADD_COMPILE_OPTIONS(-Wall)
endif()

FILE(GLOB_RECURSE sources ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

INCLUDE_DIRECTORIES(
    ../../../extlibs/stb/include/
    ../../../extlibs/tinyobjloader/include/
    ../../../
)

ADD_LIBRARY(
    ${PROJECT_NAME} SHARED
    ${sources}
)

if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} nucleus)
else(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} nucleus mingw32)
endif()

INSTALL(
    TARGETS ${PROJECT_NAME}
    LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../../libs/
    ARCHIVE DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../../libs/
    RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../../build/bin/engine/module/
)
