CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

PROJECT(nucleus-vulkan LANGUAGES CXX VERSION 0.0.1)

SET(CMAKE_BUILD_TYPE Debug)
#SET(CMAKE_BUILD_TYPE Release)

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
SET(CMAKE_CXX_STANDARD 17)

FIND_PACKAGE(Vulkan REQUIRED FATAL_ERROR)

INCLUDE_DIRECTORIES(
    ../../../
    ../../../extlibs/VulkanMemoryAllocator/include/
    ${Vulkan_INCLUDE_DIRS}
)

FILE(GLOB_RECURSE sources ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

ADD_LIBRARY(
    ${PROJECT_NAME} SHARED
    ${sources}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    mingw32
    nucleus
    ${Vulkan_LIBRARIES}
)

INSTALL(
    TARGETS ${PROJECT_NAME}
    LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../../libs/
    ARCHIVE DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../../libs/
    RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../../build/bin/engine/module/
)
