CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

PROJECT(nucleus-softrast LANGUAGES C VERSION 0.0.1)

SET(CMAKE_BUILD_TYPE Debug)
#SET(CMAKE_BUILD_TYPE Release)

SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall")
SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_DEBUG} -O2")

INCLUDE_DIRECTORIES(
    ../../../extlibs/freetype/include/
)

FILE(GLOB_RECURSE sources ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

ADD_LIBRARY(
    ${PROJECT_NAME} SHARED
    ${sources}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    mingw32
    nucleus
    ${CMAKE_CURRENT_SOURCE_DIR}/../../../extlibs/freetype/lib/mingw64/libfreetype.a
)

INSTALL(
    TARGETS ${PROJECT_NAME}
    LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../../libs/
    ARCHIVE DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../../libs/
    RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../../bin/engine/system/
)
